# postwoman

./: Cargo.toml  README.md  postwoman.json  postwoman.toml
.github/workflows/: test.yml
src/: builder.rs  collector.rs  errors.rs  ext.rs  fmt.rs  main.rs  model.rs  printer.rs  proto.rs  requestor.rs
src/model/: client.rs  collector.rs  description.rs  endpoint.rs  extractor.rs  host.rs  mod.rs  path.rs  query.rs  request.rs  url.rs
